--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
-<html>
+<html lang="en" dir="ltr">
     <head>
+          <meta charset="utf-8" />
+    <meta name="viewport" content="width=devic­e-width, initial-scale=1" />
         <link href="style.css" rel="stylesheet">
         <title>Young Programmers</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
