navbar and font updated

--- a/Pages/register.html
+++ b/Pages/register.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link href="register.css" rel="stylesheet">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=devic­e-width, initial-scale=1" />
+        <link href="../CSS/register.css" rel="stylesheet">
         <title>Young Programmers</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
