--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html lang="en" dir="ltr">
     <head>
           <meta charset="utf-8" />
-    <meta name="viewport" content="width=devic­e-width, initial-scale=1" />
-        <link href="style.css" rel="stylesheet">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <link href="CSS/style.css" rel="stylesheet">
         <title>Young Programmers</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Modern+Antiqua&display=swap" rel="stylesheet">
     </head>
         <body>
-            <div id="header-links">
-                <a href="#" class="header-link">Home</a>
-                <a href="#" class="header-link">About</a>
-                <a href="#" class="header-link">Course</a>
-                <a href="#" class="header-link">Videos</a>
-                <a href="register.html" class="register">Register Here</a>
+            <div class="navbar">
+              <div class="leftnavbar">
+                <a href="Pages/register.html" class="register">Register Here</a>
+                </div>
+              <div class="centernavbar">
+                <a href="#" class="active">Home</a>
+                <a href="#">About</a>
+                <a href="#">Course</a>
+                <a href="#">Videos</a>
+                </div>
+                <div class="rightnavbar">
+                <a href="Pages/register.html" class="register">Register Here</a>
+                </div>
             </div>
             <h1>Learn To Code With <br>Young Programmers</h1>
             <p class="quote-1">A learning platform to help young programmers navigate through programming with ease as <br> there are lots of videos, courses with certificates and many other resources to guide newbies <br>through their journey in tech.</p>
