navbar now responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Modern+Antiqua&display=swap" rel="stylesheet">
     </head>
         <body>
+          <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+              >&times;</a
+            >
+            <div class="overlay-content">
+              <a href="index.html">Home</a>
+              <a href="html/about.html">About</a>
+              <a href="html/projects.html">Projects</a>
+              <a href="html/resume.html">Resume</a>
+              <a href="html/contact.html">Contact Me</a>
+              </div></div>
+
             <div class="navbar">
               <div class="leftnavbar">
                 <a href="Pages/register.html" class="register">Register Here</a>
@@ -22,7 +34,9 @@
                 </div>
                 <div class="rightnavbar">
                 <a href="Pages/register.html" class="register">Register Here</a>
+            
                 </div>
+                  <span onclick="openNav()">&#9776;</span>
             </div>
             <h1>Learn To Code With <br>Young Programmers</h1>
             <p class="quote-1">A learning platform to help young programmers navigate through programming with ease as <br> there are lots of videos, courses with certificates and many other resources to guide newbies <br>through their journey in tech.</p>
@@ -103,5 +117,6 @@
     <p class="number">+234 904-4287-253</p>
     <p class="number">+234 704-9418-642</p>
     <p class="quote-6">Copyright 2023-2024. All rights Reserved</p>
+    <script src="script.js"></script>
 </body>
 </html>
