--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
                 </div>
                   <span onclick="openNav()">&#9776;</span>
             </div>
-            <h1>Learn To Code With <br>Young Programmers</h1>
-            <p class="quote-1">A learning platform to help young programmers navigate through programming with ease as <br> there are lots of videos, courses with certificates and many other resources to guide newbies <br>through their journey in tech.</p>
-            <a  href="#" id="get-started">Get Started</a>
+            <div class="section">
+              <div class="sectionleft">
+              <h1>Learn To Code With <br>Young Programmers</h1>
+              <p>A learning platform to help young programmers navigate through programming with ease as  there are lots of videos, courses with certificates and many other resources to guide newbies through their journey in tech.</p>
+              <br><br><br><a href="#" id="get-started">Get Started</a>
+              </div>
+              <div class="sectionright">
+               <img src="images/css.png" width="300px" height="300px">
+              </div>
+            </div>
             <div class="section-1">
             </div>
             <h2 class="what-we-do">What Do We Do ?</h2>
