--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
                   <span onclick="openNav()">&#9776;</span>
             </div>
+            <a href="wa.me/+2349165852002"><div class="quick-message"><img src="images/message.png" width="60px" height="60px"></div></a>
             <div class="section">
               <div class="sectionleft">
               <h1>Learn To Code With <br>Young Programmers</h1>
@@ -47,6 +48,7 @@
               <div class="sectionright">
                <img src="images/css.png" width="300px" height="300px">
               </div>
+
             </div>
             <div class="section-1">
             </div>
